# hap-ibd-cpp

./: .gitmodules  README.md  meson.build  test.ipynb  test.py
hap-ibd-cpp/hap-ibd-cpp/: main.cpp
hap-ibd-cpp/hap-ibd-cpp.xcodeproj/: project.pbxproj
hap-ibd-cpp/hap-ibd-cpp.xcodeproj/project.xcworkspace/xcuserdata/alexmercadel.xcuserdatad/: UserInterfaceState.xcuserstate
hap-ibd-cpp/hap-ibd-cpp.xcodeproj/xcuserdata/alexmercadel.xcuserdatad/xcschemes/: xcschememanagement.plist
inc/: hap_ibd.hpp  match.hpp  params.hpp  read_rate_map.hpp  utils.hpp  vcf.hpp
src/: main.cpp  main2.cpp  match.cpp  read_rate_map.cpp  utils.cpp  vcf.cpp
